feature/2909: close popover from event inside popover content

--- a/projects/front-components/src/lib/components/dropdown-list/dropdown-list.component.html
+++ b/projects/front-components/src/lib/components/dropdown-list/dropdown-list.component.html
@@ -1,8 +1,9 @@
-<div class="dropdown__options">
-    @if (!!optionsContent) {
-        <div class="dropdown__options-content" (click)="selectOption(null)">
-            <ng-content></ng-content>
-        </div>
-    }
-</div>
-
+<ng-template>
+    <div class="dropdown__options">
+        @if (!!optionsContent) {
+            <div class="dropdown__options-content" (click)="selectOption(null)">
+                <ng-content></ng-content>
+            </div>
+        }
+    </div>
+</ng-template>
