feature/2909: add ss-lib-select

--- a/projects/front-components/src/lib/components/input/input.component.html
+++ b/projects/front-components/src/lib/components/input/input.component.html
@@ -8,5 +8,6 @@
         type="text"
         [formControl]="inputCtrl"
         [placeholder]="placeholder()"
+        [readOnly]="readOnly()"
     />
 </div>
