--- a/projects/test-app/src/app/app.component.scss
+++ b/projects/test-app/src/app/app.component.scss
@@ -2,6 +2,7 @@
     width: 500px;
     height: 500px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: flex-start;
     padding-left: 50px;
