feature/2909: pass value from dropdown-item to select

--- a/projects/front-components/src/lib/components/dropdown-item/dropdown-item.component.html
+++ b/projects/front-components/src/lib/components/dropdown-item/dropdown-item.component.html
@@ -20,6 +20,6 @@
         [weight]="TextWeight.Medium"
         [color]="textColor()"
     >
-        {{ text() }}
+        {{ itemText() }}
     </ss-lib-text>
 </div>
