--- a/projects/front-components/src/lib/components/dropdown-list/dropdown-list.component.html
+++ b/projects/front-components/src/lib/components/dropdown-list/dropdown-list.component.html
@@ -1,7 +1,7 @@
-<ng-template>
+<ng-template #dropdownTemplate>
     <div class="dropdown__options">
         @if (!!optionsContent) {
-            <div class="dropdown__options-content" (click)="selectOption(null)">
+            <div class="dropdown__options-content">
                 <ng-content></ng-content>
             </div>
         }
