--- a/projects/front-components/src/lib/components/input/input.component.html
+++ b/projects/front-components/src/lib/components/input/input.component.html
@@ -6,6 +6,7 @@
         tabindex="-1"
         class="input-field"
         type="text"
+        [style.text-align]="align()"
         [formControl]="inputCtrl"
         [placeholder]="placeholder()"
         [readOnly]="readOnly()"
