--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -153,4 +153,75 @@
 <br>
 <ss-lib-divider></ss-lib-divider>
 
+<div class="input">
+  <ss-lib-form-field
+    [label]="'Название'"
+    [hint]="'Подсказка'"
+    [errorText]="'Неверно заполнено'"
+    [showValidationFieldIcon]="true"
+  >
+    <ss-lib-input
+      fieldCtrl
+      [formControl]="inputCtrl"
+      [placeholder]="'oleg@mail.ru'"
+    />
+  </ss-lib-form-field>
+</div>
+<br/>
+<br/>
+
+<div class="input">
+  <ss-lib-form-field
+    [label]="'Название'"
+    [hint]="'Подсказка'"
+    [errorText]="'Текст ошибки'"
+  >
+    <ss-lib-textarea
+      fieldCtrl
+      [formControl]="textareaCtrl"
+    />
+  </ss-lib-form-field>
+</div>
+<br>
+<br>
+
+<ss-lib-button
+  [text]="'Test button'"
+  [popoverTriggerFor]="dropdown1"
+/>
+<ss-lib-dropdown-list #dropdown1>
+  <ss-lib-dropdown-item [label]="'Опция'" [icon]="IconType.Bell"/>
+  <ss-lib-dropdown-item [label]="'Опция'" [icon]="IconType.Bell"/>
+  <ss-lib-dropdown-item [label]="'Опция'" [icon]="IconType.Bell"/>
+  <ss-lib-dropdown-item [label]="'Опция'" [icon]="IconType.Bell"/>
+  <ss-lib-dropdown-item [label]="'Опция'" [icon]="IconType.Bell"/>
+</ss-lib-dropdown-list>
+<br>
+
+<ss-lib-form-field
+  [label]="'Название'"
+  [hint]="'Подсказка'"
+  [errorText]="'Неверно заполнено'"
+  [showValidationFieldIcon]="true"
+>
+  <ss-lib-select
+    fieldCtrl
+    [formControl]="selectCtrl"
+    [popoverTriggerFor]="dropdown2"
+  >
+    <ss-lib-dropdown-list #dropdown2>
+      @for (item of dropdownItems; track item.id) {
+        <ss-lib-dropdown-item [value]="item" [icon]="IconType.Bell"/>
+      }
+    </ss-lib-dropdown-list>
+  </ss-lib-select>
+</ss-lib-form-field>
+<br>
+<br>
+
+<ss-lib-avatar
+  [username]="'ВН'"
+  [src]="'https://i.pravatar.cc/300'"
+></ss-lib-avatar>
+
 
