--- a/projects/front-components/src/lib/components/input/input.component.html
+++ b/projects/front-components/src/lib/components/input/input.component.html
@@ -6,7 +6,9 @@
         tabindex="-1"
         class="input-field"
         type="text"
+        step="any"
         [style.text-align]="align()"
+        [maskito]="inputMask()"
         [formControl]="inputCtrl"
         [placeholder]="placeholder()"
         [readOnly]="readOnly()"
