--- a/projects/front-components/src/lib/components/number-picker/number-picker.component.html
+++ b/projects/front-components/src/lib/components/number-picker/number-picker.component.html
@@ -1,10 +1,11 @@
+<pre>{{ numberPickerCtrl.value }}</pre>
 <div class="number-picker">
     <ss-lib-button
         class="number-picker__number-indicator indicator-start border-none"
         [type]="ButtonType.Secondary"
         [icon]="IconType.Minus"
         [iconPosition]="IconPosition.OnlyIcon"
-        [disabled]="isDisabled() || numberPickerCtrl.value && numberPickerCtrl.value <= min()"
+        [disabled]="isDisabled() || numberPickerCtrl.value && min() && numberPickerCtrl.value <= min()!"
         (click)="!isDisabled() && changeNumberValueByStep(Direction.Previous)"
     />
 
@@ -13,6 +14,9 @@
             <ss-lib-input
                 fieldCtrl
                 [formControl]="numberPickerCtrl"
+                [type]="InputType.Number"
+                [min]="min()"
+                [max]="max()"
                 [align]="Align.Center"
             />
         </ss-lib-form-field>
@@ -23,7 +27,7 @@
         [type]="ButtonType.Secondary"
         [icon]="IconType.Plus"
         [iconPosition]="IconPosition.OnlyIcon"
-        [disabled]="isDisabled() || numberPickerCtrl.value &&  numberPickerCtrl.value >= max()"
+        [disabled]="isDisabled() || numberPickerCtrl.value && max() && numberPickerCtrl.value >= max()!"
         (click)="!isDisabled() && changeNumberValueByStep(Direction.Next)"
     />
 </div>
