--- a/projects/test-app/src/app/app.component.html
+++ b/projects/test-app/src/app/app.component.html
@@ -222,6 +222,6 @@
 ></ss-lib-avatar>
 <br>
 
-<ss-lib-number-picker [formControl]="numberPickerCtrl"></ss-lib-number-picker>
+<ss-lib-number-picker [formControl]="numberPickerCtrl" [min]="5" [max]="10"></ss-lib-number-picker>
 
 
