feature/2904: uncommit code

--- a/projects/test-app/src/app/app.component.html
+++ b/projects/test-app/src/app/app.component.html
@@ -1,53 +1,53 @@
-<!--<ss-lib-icon [icon]="IconType.Bell" [color]="Colors.IconOnDisabled"/>-->
+<ss-lib-icon [icon]="IconType.Bell" [color]="Colors.IconOnDisabled"/>
 
-<!--<ss-lib-text [type]="TextType.BodyXs" [weight]="TextWeight.Regular">Обычный текст</ss-lib-text>-->
-<!--<ss-lib-text [type]="TextType.BodySm">Обычный текст</ss-lib-text>-->
-<!--<ss-lib-text [type]="TextType.BodyMd">Обычный текст</ss-lib-text>-->
-<!--<ss-lib-text [type]="TextType.BodyLg">Обычный текст</ss-lib-text>-->
-<!--<ss-lib-text [type]="TextType.BodyXl">Обычный текст</ss-lib-text>-->
+<ss-lib-text [type]="TextType.BodyXs" [weight]="TextWeight.Regular">Обычный текст</ss-lib-text>
+<ss-lib-text [type]="TextType.BodySm">Обычный текст</ss-lib-text>
+<ss-lib-text [type]="TextType.BodyMd">Обычный текст</ss-lib-text>
+<ss-lib-text [type]="TextType.BodyLg">Обычный текст</ss-lib-text>
+<ss-lib-text [type]="TextType.BodyXl">Обычный текст</ss-lib-text>
 
-<!--<ss-lib-text [type]="TextType.HeadingXs" [weight]="TextWeight.Regular">Обычный текст</ss-lib-text>-->
-<!--<ss-lib-text [type]="TextType.HeadingXs" [weight]="TextWeight.Medium">Текст медиум</ss-lib-text>-->
-<!--<ss-lib-text [type]="TextType.HeadingXs" [weight]="TextWeight.Semibold">Полу-жирный</ss-lib-text>-->
-<!--<ss-lib-text [type]="TextType.HeadingXs" [weight]="TextWeight.Bold">Жирный текст</ss-lib-text>-->
+<ss-lib-text [type]="TextType.HeadingXs" [weight]="TextWeight.Regular">Обычный текст</ss-lib-text>
+<ss-lib-text [type]="TextType.HeadingXs" [weight]="TextWeight.Medium">Текст медиум</ss-lib-text>
+<ss-lib-text [type]="TextType.HeadingXs" [weight]="TextWeight.Semibold">Полу-жирный</ss-lib-text>
+<ss-lib-text [type]="TextType.HeadingXs" [weight]="TextWeight.Bold">Жирный текст</ss-lib-text>
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Primary"-->
-<!--    [text]="'Кнопка'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.End"-->
-<!--    [size]="Size.Small"-->
-<!--/>-->
-<!--<br/>-->
+<ss-lib-button
+    [type]="ButtonType.Primary"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.End"
+    [size]="Size.Small"
+/>
+<br/>
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Primary"-->
-<!--    [text]="'Кнопка'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.End"-->
-<!--    [size]="Size.Medium"-->
-<!--/>-->
-<!--<br/>-->
+<ss-lib-button
+    [type]="ButtonType.Primary"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.End"
+    [size]="Size.Medium"
+/>
+<br/>
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Primary"-->
-<!--    [text]="'Кнопка'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.End"-->
-<!--    [size]="Size.Large"-->
-<!--/>-->
-<!--<br/>-->
+<ss-lib-button
+    [type]="ButtonType.Primary"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.End"
+    [size]="Size.Large"
+/>
+<br/>
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Primary"-->
-<!--    [text]="'Кнопка'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.End"-->
-<!--    [size]="Size.Large"-->
-<!--    [disabled]="true"-->
-<!--/>-->
+<ss-lib-button
+    [type]="ButtonType.Primary"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.End"
+    [size]="Size.Large"
+    [disabled]="true"
+/>
 
-<!--<br/>-->
+<br/>
 
 <ss-lib-button
     [type]="ButtonType.Secondary"
@@ -57,164 +57,164 @@
     [size]="Size.Large"
 />
 
-<!--<br/>-->
+<br/>
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Flat"-->
-<!--    [text]="'Кнопка'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.End"-->
-<!--    [size]="Size.Large"-->
-<!--/>-->
+<ss-lib-button
+    [type]="ButtonType.Flat"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.End"
+    [size]="Size.Large"
+/>
 
-<!--&lt;!&ndash;  *****   &ndash;&gt;-->
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Primary"-->
-<!--    [text]="'Кнопка'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.OnlyIcon"-->
-<!--    [size]="Size.Small"-->
-<!--/>-->
-<!--<br/>-->
+<!--  *****   -->
+<ss-lib-button
+    [type]="ButtonType.Primary"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.OnlyIcon"
+    [size]="Size.Small"
+/>
+<br/>
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Primary"-->
-<!--    [text]="'Кнопка'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.OnlyIcon"-->
-<!--    [size]="Size.Medium"-->
-<!--/>-->
-<!--<br/>-->
+<ss-lib-button
+    [type]="ButtonType.Primary"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.OnlyIcon"
+    [size]="Size.Medium"
+/>
+<br/>
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Primary"-->
-<!--    [text]="'Кнопка'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.OnlyIcon"-->
-<!--    [size]="Size.Large"-->
-<!--/>-->
-<!--<br/>-->
+<ss-lib-button
+    [type]="ButtonType.Primary"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.OnlyIcon"
+    [size]="Size.Large"
+/>
+<br/>
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Primary"-->
-<!--    [text]="'Кнопка'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.OnlyIcon"-->
-<!--    [size]="Size.Large"-->
-<!--    [disabled]="true"-->
-<!--/>-->
+<ss-lib-button
+    [type]="ButtonType.Primary"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.OnlyIcon"
+    [size]="Size.Large"
+    [disabled]="true"
+/>
 
-<!--<br/>-->
+<br/>
 
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Secondary"-->
-<!--    [text]="'Кнопка'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.OnlyIcon"-->
-<!--    [size]="Size.Large"-->
-<!--/>-->
+<ss-lib-button
+    [type]="ButtonType.Secondary"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.OnlyIcon"
+    [size]="Size.Large"
+/>
 
-<!--<br/>-->
+<br/>
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Flat"-->
-<!--    [text]="'Кнопка'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.OnlyIcon"-->
-<!--    [size]="Size.Large"-->
-<!--/>-->
-<!--<br/>-->
+<ss-lib-button
+    [type]="ButtonType.Flat"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.OnlyIcon"
+    [size]="Size.Large"
+/>
+<br/>
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Close"-->
-<!--    [text]="'Кнопка'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.OnlyIcon"-->
-<!--    [size]="Size.Large"-->
-<!--/>-->
-<!--<br/>-->
+<ss-lib-button
+    [type]="ButtonType.Close"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.OnlyIcon"
+    [size]="Size.Large"
+/>
+<br/>
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Link"-->
-<!--    [text]="'Кнопка'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.Start"-->
-<!--/>-->
+<ss-lib-button
+    [type]="ButtonType.Link"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.Start"
+/>
 
-<!--<br/>-->
+<br/>
 
-<!--<ss-lib-toggle [formControl]="toggleCtrl"></ss-lib-toggle>-->
-<!--<br>-->
+<ss-lib-toggle [formControl]="toggleCtrl"></ss-lib-toggle>
+<br>
 
-<!--<ss-lib-toggle-icon [formControl]="toggleCtrl"></ss-lib-toggle-icon>-->
-<!--<br>-->
+<ss-lib-toggle-icon [formControl]="toggleCtrl"></ss-lib-toggle-icon>
+<br>
 
-<!--<div class="input">-->
-<!--    <ss-lib-form-field-->
-<!--        [label]="'Название'"-->
-<!--        [hint]="'Подсказка'"-->
-<!--        [errorText]="'Неверно заполнено'"-->
-<!--        [showValidationFieldIcon]="true"-->
-<!--    >-->
-<!--        <ss-lib-input-->
-<!--            fieldCtrl-->
-<!--            [formControl]="inputCtrl"-->
-<!--            [placeholder]="'oleg@mail.ru'"-->
-<!--        />-->
-<!--    </ss-lib-form-field>-->
-<!--</div>-->
-<!--<br/>-->
-<!--<br/>-->
+<div class="input">
+    <ss-lib-form-field
+        [label]="'Название'"
+        [hint]="'Подсказка'"
+        [errorText]="'Неверно заполнено'"
+        [showValidationFieldIcon]="true"
+    >
+        <ss-lib-input
+            fieldCtrl
+            [formControl]="inputCtrl"
+            [placeholder]="'oleg@mail.ru'"
+        />
+    </ss-lib-form-field>
+</div>
+<br/>
+<br/>
 
-<!--<div class="input">-->
-<!--    <ss-lib-form-field-->
-<!--        [label]="'Название'"-->
-<!--        [hint]="'Подсказка'"-->
-<!--        [errorText]="'Текст ошибки'"-->
-<!--    >-->
-<!--        <ss-lib-textarea-->
-<!--            fieldCtrl-->
-<!--            [formControl]="textareaCtrl"-->
-<!--        />-->
-<!--    </ss-lib-form-field>-->
-<!--</div>-->
-<!--<br>-->
-<!--<br>-->
+<div class="input">
+    <ss-lib-form-field
+        [label]="'Название'"
+        [hint]="'Подсказка'"
+        [errorText]="'Текст ошибки'"
+    >
+        <ss-lib-textarea
+            fieldCtrl
+            [formControl]="textareaCtrl"
+        />
+    </ss-lib-form-field>
+</div>
+<br>
+<br>
 
-<!--<ss-lib-button-->
-<!--    [text]="'Test button'"-->
-<!--    [popoverTriggerFor]="dropdown1"-->
-<!--/>-->
-<!--<ss-lib-dropdown-list #dropdown1>-->
-<!--    <ss-lib-dropdown-item [label]="'Опция'" [icon]="IconType.Bell"/>-->
-<!--    <ss-lib-dropdown-item [label]="'Опция'" [icon]="IconType.Bell"/>-->
-<!--    <ss-lib-dropdown-item [label]="'Опция'" [icon]="IconType.Bell"/>-->
-<!--    <ss-lib-dropdown-item [label]="'Опция'" [icon]="IconType.Bell"/>-->
-<!--    <ss-lib-dropdown-item [label]="'Опция'" [icon]="IconType.Bell"/>-->
-<!--</ss-lib-dropdown-list>-->
-<!--<br>-->
+<ss-lib-button
+    [text]="'Test button'"
+    [popoverTriggerFor]="dropdown1"
+/>
+<ss-lib-dropdown-list #dropdown1>
+    <ss-lib-dropdown-item [label]="'Опция'" [icon]="IconType.Bell"/>
+    <ss-lib-dropdown-item [label]="'Опция'" [icon]="IconType.Bell"/>
+    <ss-lib-dropdown-item [label]="'Опция'" [icon]="IconType.Bell"/>
+    <ss-lib-dropdown-item [label]="'Опция'" [icon]="IconType.Bell"/>
+    <ss-lib-dropdown-item [label]="'Опция'" [icon]="IconType.Bell"/>
+</ss-lib-dropdown-list>
+<br>
 
-<!--<ss-lib-form-field-->
-<!--    [label]="'Название'"-->
-<!--    [hint]="'Подсказка'"-->
-<!--    [errorText]="'Неверно заполнено'"-->
-<!--    [showValidationFieldIcon]="true"-->
-<!--&gt;-->
-<!--    <ss-lib-select-->
-<!--        fieldCtrl-->
-<!--        [formControl]="selectCtrl"-->
-<!--        [popoverTriggerFor]="dropdown2"-->
-<!--    >-->
-<!--        <ss-lib-dropdown-list #dropdown2>-->
-<!--            @for (item of dropdownItems; track item.id) {-->
-<!--                <ss-lib-dropdown-item [value]="item" [icon]="IconType.Bell"/>-->
-<!--            }-->
-<!--        </ss-lib-dropdown-list>-->
-<!--    </ss-lib-select>-->
-<!--</ss-lib-form-field>-->
-<!--<br>-->
-<!--<br>-->
+<ss-lib-form-field
+    [label]="'Название'"
+    [hint]="'Подсказка'"
+    [errorText]="'Неверно заполнено'"
+    [showValidationFieldIcon]="true"
+>
+    <ss-lib-select
+        fieldCtrl
+        [formControl]="selectCtrl"
+        [popoverTriggerFor]="dropdown2"
+    >
+        <ss-lib-dropdown-list #dropdown2>
+            @for (item of dropdownItems; track item.id) {
+                <ss-lib-dropdown-item [value]="item" [icon]="IconType.Bell"/>
+            }
+        </ss-lib-dropdown-list>
+    </ss-lib-select>
+</ss-lib-form-field>
+<br>
+<br>
 
 <ss-lib-avatar
     [username]="'ВН'"
