--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -12,134 +12,134 @@
 <ss-lib-text [type]="TextType.HeadingXs" [weight]="TextWeight.Bold">Жирный текст</ss-lib-text>
 
 <ss-lib-button
-  [type]="ButtonType.Primary"
-  [text]="'Кнопка'"
-  [icon]="IconType.Bell"
-  [iconPosition]="IconPosition.End"
-  [size]="Size.Small"
+    [type]="ButtonType.Primary"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.End"
+    [size]="Size.Small"
 />
 <br/>
 
 <ss-lib-button
-  [type]="ButtonType.Primary"
-  [text]="'Кнопка'"
-  [icon]="IconType.Bell"
-  [iconPosition]="IconPosition.End"
-  [size]="Size.Medium"
+    [type]="ButtonType.Primary"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.End"
+    [size]="Size.Medium"
 />
 <br/>
 
 <ss-lib-button
-  [type]="ButtonType.Primary"
-  [text]="'Кнопка'"
-  [icon]="IconType.Bell"
-  [iconPosition]="IconPosition.End"
-  [size]="Size.Large"
+    [type]="ButtonType.Primary"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.End"
+    [size]="Size.Large"
 />
 <br/>
 
 <ss-lib-button
-  [type]="ButtonType.Primary"
-  [text]="'Кнопка'"
-  [icon]="IconType.Bell"
-  [iconPosition]="IconPosition.End"
-  [size]="Size.Large"
-  [disabled]="true"
-/>
-
-<br/>
-
-<ss-lib-button
-  [type]="ButtonType.Secondary"
-  [text]="'Кнопка'"
-  [icon]="IconType.Bell"
-  [iconPosition]="IconPosition.End"
-  [size]="Size.Large"
+    [type]="ButtonType.Primary"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.End"
+    [size]="Size.Large"
+    [disabled]="true"
 />
 
 <br/>
 
 <ss-lib-button
-  [type]="ButtonType.Flat"
-  [text]="'Кнопка'"
-  [icon]="IconType.Bell"
-  [iconPosition]="IconPosition.End"
-  [size]="Size.Large"
+    [type]="ButtonType.Secondary"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.End"
+    [size]="Size.Large"
+/>
+
+<br/>
+
+<ss-lib-button
+    [type]="ButtonType.Flat"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.End"
+    [size]="Size.Large"
 />
 
 <!--  *****   -->
 <ss-lib-button
-  [type]="ButtonType.Primary"
-  [text]="'Кнопка'"
-  [icon]="IconType.Bell"
-  [iconPosition]="IconPosition.OnlyIcon"
-  [size]="Size.Small"
+    [type]="ButtonType.Primary"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.OnlyIcon"
+    [size]="Size.Small"
 />
 <br/>
 
 <ss-lib-button
-  [type]="ButtonType.Primary"
-  [text]="'Кнопка'"
-  [icon]="IconType.Bell"
-  [iconPosition]="IconPosition.OnlyIcon"
-  [size]="Size.Medium"
+    [type]="ButtonType.Primary"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.OnlyIcon"
+    [size]="Size.Medium"
 />
 <br/>
 
 <ss-lib-button
-  [type]="ButtonType.Primary"
-  [text]="'Кнопка'"
-  [icon]="IconType.Bell"
-  [iconPosition]="IconPosition.OnlyIcon"
-  [size]="Size.Large"
+    [type]="ButtonType.Primary"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.OnlyIcon"
+    [size]="Size.Large"
 />
 <br/>
 
 <ss-lib-button
-  [type]="ButtonType.Primary"
-  [text]="'Кнопка'"
-  [icon]="IconType.Bell"
-  [iconPosition]="IconPosition.OnlyIcon"
-  [size]="Size.Large"
-  [disabled]="true"
+    [type]="ButtonType.Primary"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.OnlyIcon"
+    [size]="Size.Large"
+    [disabled]="true"
 />
 
 <br/>
 
 
 <ss-lib-button
-  [type]="ButtonType.Secondary"
-  [text]="'Кнопка'"
-  [icon]="IconType.Bell"
-  [iconPosition]="IconPosition.OnlyIcon"
-  [size]="Size.Large"
+    [type]="ButtonType.Secondary"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.OnlyIcon"
+    [size]="Size.Large"
 />
 
 <br/>
 
 <ss-lib-button
-  [type]="ButtonType.Flat"
-  [text]="'Кнопка'"
-  [icon]="IconType.Bell"
-  [iconPosition]="IconPosition.OnlyIcon"
-  [size]="Size.Large"
+    [type]="ButtonType.Flat"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.OnlyIcon"
+    [size]="Size.Large"
 />
 <br/>
 
 <ss-lib-button
-  [type]="ButtonType.Close"
-  [text]="'Кнопка'"
-  [icon]="IconType.Bell"
-  [iconPosition]="IconPosition.OnlyIcon"
-  [size]="Size.Large"
+    [type]="ButtonType.Close"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.OnlyIcon"
+    [size]="Size.Large"
 />
 <br/>
 
 <ss-lib-button
-  [type]="ButtonType.Link"
-  [text]="'Кнопка'"
-  [icon]="IconType.Bell"
-  [iconPosition]="IconPosition.Start"
+    [type]="ButtonType.Link"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.Start"
 />
 
 <br/>
@@ -154,74 +154,77 @@
 <ss-lib-divider></ss-lib-divider>
 
 <div class="input">
-  <ss-lib-form-field
-    [label]="'Название'"
-    [hint]="'Подсказка'"
-    [errorText]="'Неверно заполнено'"
-    [showValidationFieldIcon]="true"
-  >
-    <ss-lib-input
-      fieldCtrl
-      [formControl]="inputCtrl"
-      [placeholder]="'oleg@mail.ru'"
-    />
-  </ss-lib-form-field>
+    <ss-lib-form-field
+        [label]="'Название'"
+        [hint]="'Подсказка'"
+        [errorText]="'Неверно заполнено'"
+        [showValidationFieldIcon]="true"
+    >
+        <ss-lib-input
+            fieldCtrl
+            [formControl]="inputCtrl"
+            [placeholder]="'oleg@mail.ru'"
+        />
+    </ss-lib-form-field>
 </div>
 <br/>
 <br/>
 
 <div class="input">
-  <ss-lib-form-field
-    [label]="'Название'"
-    [hint]="'Подсказка'"
-    [errorText]="'Текст ошибки'"
-  >
-    <ss-lib-textarea
-      fieldCtrl
-      [formControl]="textareaCtrl"
-    />
-  </ss-lib-form-field>
+    <ss-lib-form-field
+        [label]="'Название'"
+        [hint]="'Подсказка'"
+        [errorText]="'Текст ошибки'"
+    >
+        <ss-lib-textarea
+            fieldCtrl
+            [formControl]="textareaCtrl"
+        />
+    </ss-lib-form-field>
 </div>
 <br>
 <br>
 
 <ss-lib-button
-  [text]="'Test button'"
-  [popoverTriggerFor]="dropdown1"
+    [text]="'Test button'"
+    [popoverTriggerFor]="dropdown1"
 />
 <ss-lib-dropdown-list #dropdown1>
-  <ss-lib-dropdown-item [label]="'Опция'" [icon]="IconType.Bell"/>
-  <ss-lib-dropdown-item [label]="'Опция'" [icon]="IconType.Bell"/>
-  <ss-lib-dropdown-item [label]="'Опция'" [icon]="IconType.Bell"/>
-  <ss-lib-dropdown-item [label]="'Опция'" [icon]="IconType.Bell"/>
-  <ss-lib-dropdown-item [label]="'Опция'" [icon]="IconType.Bell"/>
+    <ss-lib-dropdown-item [label]="'Опция'" [icon]="IconType.Bell"/>
+    <ss-lib-dropdown-item [label]="'Опция'" [icon]="IconType.Bell"/>
+    <ss-lib-dropdown-item [label]="'Опция'" [icon]="IconType.Bell"/>
+    <ss-lib-dropdown-item [label]="'Опция'" [icon]="IconType.Bell"/>
+    <ss-lib-dropdown-item [label]="'Опция'" [icon]="IconType.Bell"/>
 </ss-lib-dropdown-list>
 <br>
 
 <ss-lib-form-field
-  [label]="'Название'"
-  [hint]="'Подсказка'"
-  [errorText]="'Неверно заполнено'"
-  [showValidationFieldIcon]="true"
+    [label]="'Название'"
+    [hint]="'Подсказка'"
+    [errorText]="'Неверно заполнено'"
+    [showValidationFieldIcon]="true"
 >
-  <ss-lib-select
-    fieldCtrl
-    [formControl]="selectCtrl"
-    [popoverTriggerFor]="dropdown2"
-  >
-    <ss-lib-dropdown-list #dropdown2>
-      @for (item of dropdownItems; track item.id) {
-        <ss-lib-dropdown-item [value]="item" [icon]="IconType.Bell"/>
-      }
-    </ss-lib-dropdown-list>
-  </ss-lib-select>
+    <ss-lib-select
+        fieldCtrl
+        [formControl]="selectCtrl"
+        [popoverTriggerFor]="dropdown2"
+    >
+        <ss-lib-dropdown-list #dropdown2>
+            @for (item of dropdownItems; track item.id) {
+                <ss-lib-dropdown-item [value]="item" [icon]="IconType.Bell"/>
+            }
+        </ss-lib-dropdown-list>
+    </ss-lib-select>
 </ss-lib-form-field>
 <br>
 <br>
 
 <ss-lib-avatar
-  [username]="'ВН'"
-  [src]="'https://i.pravatar.cc/300'"
+    [username]="'ВН'"
+    [src]="'https://i.pravatar.cc/300'"
 ></ss-lib-avatar>
+<br>
+
+<ss-lib-number-picker [formControl]="numberPickerCtrl" [min]="5" [max]="1000"></ss-lib-number-picker>
 
 
