feature/2910: dropdown-list changes for avatar-dropdown and button-dropdown

--- a/projects/front-components/src/lib/components/dropdown-list/dropdown-list.component.html
+++ b/projects/front-components/src/lib/components/dropdown-list/dropdown-list.component.html
@@ -1,5 +1,11 @@
 <ng-template #dropdownTemplate>
     <div class="dropdown__options">
+        @if (headerTemplateRef()) {
+            <ng-container [ngTemplateOutlet]="headerTemplateRef()"></ng-container>
+
+            <ss-lib-divider/>
+        }
+
         @if (!!optionsContent) {
             <div class="dropdown__options-content">
                 <ng-content></ng-content>
