--- a/projects/front-components/src/lib/components/dropdown-list/dropdown-list.component.scss
+++ b/projects/front-components/src/lib/components/dropdown-list/dropdown-list.component.scss
@@ -10,6 +10,10 @@
     overflow-y: auto;
     z-index: 299;
     box-shadow: 0px 3px 3px -1.5px #0A0D120A, 0px 8px 8px -4px #0A0D1208, 0px 20px 24px -4px #0A0D1214;
+
+    ss-lib-divider  {
+        padding: 4px 0;
+    }
 }
 
 .dropdown__options-content {
