--- a/projects/front-components/src/lib/components/sidebar/sidebar.component.html
+++ b/projects/front-components/src/lib/components/sidebar/sidebar.component.html
@@ -1,13 +1,11 @@
-<div class="sidebar" [@expandedPanel]="sidebarType()">
+<div class="sidebar  sidebar--{{ sidebarType() }}" >
   <div class="sidebar__top-menu">
     <ng-container *ngTemplateOutlet="topMenuTemplateRef"></ng-container>
   </div>
 
   <div class="sidebar__bottom-menu">
-
     <ss-lib-divider></ss-lib-divider>
     <div class="sidebar__bottom-menu-block">
-
       <ng-container *ngIf="stateCanvas.sidebarType() === SidebarType.Full">
         <ss-lib-button (click)="closeMenu()" [type]="ButtonType.Link" [text]="'Свернуть меню'"
                        [icon]="IconType.ChevronLeftDouble"></ss-lib-button>
