feature/2867: replace buttons on buttons from base class and update colors

--- a/projects/front-components/src/lib/components/header/header.component.scss
+++ b/projects/front-components/src/lib/components/header/header.component.scss
@@ -10,7 +10,7 @@
   padding: 16px 12px;
   border-bottom: 1px solid var(--border-primary);
   align-items: center;
-  box-shadow: var(--box-shadow-xs);  // sm
+  box-shadow: var(--shadow-xs);  // sm
   background-color: var(--surface-primary);
 
   &__left {
