--- a/projects/front-components/src/lib/components/dropdown-item/dropdown-item.component.scss
+++ b/projects/front-components/src/lib/components/dropdown-item/dropdown-item.component.scss
@@ -25,7 +25,7 @@
 .dropdown-item:focus-visible {
     outline: none;
     background: var(--surface-action-hover-2);
-    box-shadow: 0 0 0 2px var(--surface-primary), 0 0 0 4px var(--border-focus);
+    box-shadow: var(--focus-rings-focus-ring);
 }
 
 .dropdown-item.disabled {
