--- a/projects/front-components/src/lib/components/header/header.component.html
+++ b/projects/front-components/src/lib/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="ss-lib-header">
   <div class="ss-lib-header__left">
-    <ss-lib-button (click)="toggleMenu()" [size]="Size.Medium" [type]="ButtonType.Flat" [icon]="IconType.Burger" [iconPosition]="IconPosition.OnlyIcon"></ss-lib-button>
+    <ss-lib-button (click)="toggleMenu()" [size]="ExtraSize.md" [type]="ButtonType.Flat" [icon]="IconType.Burger" [iconPosition]="IconPosition.OnlyIcon"></ss-lib-button>
     <ng-container [ngTemplateOutlet]="leftMenuTemplateRef"></ng-container>
   </div>
   <div class="ss-lib-header__right">
