--- a/projects/front-components/src/lib/components/number-picker/number-picker.component.scss
+++ b/projects/front-components/src/lib/components/number-picker/number-picker.component.scss
@@ -3,9 +3,7 @@
     display: flex;
     align-items: center;
     border-radius: var(--border-radius-md);
-    box-shadow: 0px 1px 2px 0px #0A0D120D,
-    0px -2px 0px 0px #0A0D120D inset,
-    0px 0px 0px 1px #0A0D122E inset;
+    box-shadow: var(--shadow-xs-skeumorphic);
 
     &__number-indicator.indicator-start {
         --border-radius-top-right: 0;
