--- a/projects/front-components/src/lib/components/toggle-icon/toggle-icon.component.scss
+++ b/projects/front-components/src/lib/components/toggle-icon/toggle-icon.component.scss
@@ -15,7 +15,7 @@
 
     &:focus-visible {
         outline: none;
-        box-shadow: 0 0 0 2px var(--surface-primary), 0 0 0 4px var(--border-focus);
+        box-shadow: var(--focus-rings-focus-ring);
     }
 }
 
@@ -27,7 +27,7 @@
     width: 20px;
     height: 20px;
     background: var(--icon-on-action, #FFF);
-    box-shadow: 0 1px 2px -1px #0A0D121A, 0 1px 3px 0 #0A0D121A;
+    box-shadow: var(--shadow-sm);
     border-radius: 100%;
     transition: left 0.2s ease-in-out;
     left: 2px;
