--- a/projects/front-components/src/lib/components/toggle/toggle.component.scss
+++ b/projects/front-components/src/lib/components/toggle/toggle.component.scss
@@ -23,7 +23,7 @@
 
     &:focus-visible {
         outline: none;
-        box-shadow: 0px 0px 0px 2px var(--surface-primary), 0px 0px 0px 4px var(--border-focus);
+        box-shadow: var(--focus-rings-focus-ring);
     }
 
     &:not(.checked):focus-visible {
@@ -48,7 +48,7 @@
     width: 16px;
     height: 16px;
     background: var(--icon-on-action, #FFF);
-    box-shadow: 0 1px 2px -1px #0A0D121A, 0 1px 3px 0 #0A0D121A;
+    box-shadow: var(--shadow-sm);
     border-radius: 100%;
     transition: left 0.2s ease-in-out;
     left: 2px;
