--- a/projects/front-components/src/lib/shared/styles/_variables/_brand.scss
+++ b/projects/front-components/src/lib/shared/styles/_variables/_brand.scss
@@ -1,32 +1,65 @@
+/* ⬇️ Brand */
 :root {
-    --grey-950: #0a0d12;
+    /* Value */
+    /* color */
+    --blue-100: #cee4f4;
+    --blue-200: #9dc9ea;
+    --blue-300: #6daddf;
+    --blue-400: #3c92d5;
+    --blue-50: #f3f8fc;
     --blue-500: #0b77ca;
-    --grey-500: #717680;
-    --grey-600: #535862;
-    --grey-700: #414651;
-    --grey-800: #1c1c1c;
-    --grey-900: #191919;
-    --grey-400: #a4a7ae;
-    --grey-300: #d5d7da;
-    --grey-200: #e9eaeb;
-    --grey-100: #f5f5f5;
-    --grey-50: #fafafa;
-    --grey-25: #fdfdfd;
     --blue-600: #095fa2;
     --blue-700: #074779;
     --blue-800: #043051;
     --blue-900: #021828;
-    --blue-400: #3c92d5;
-    --blue-300: #6daddf;
-    --blue-200: #9dc9ea;
-    --blue-100: #cee4f4;
-    --blue-50: #f3f8fc;
+    --green-100: #dcfae6;
+    --green-200: #abefc6;
+    --green-25: #f6fef9;
+    --green-300: #75e0a7;
+    --green-400: #47cd89;
+    --green-50: #ecfdf3;
+    --green-500: #17b26a;
+    --green-600: #079455;
+    --green-700: #067647;
+    --green-800: #085d3a;
+    --green-900: #074d31;
+    --green-950: #053321;
+    --grey-100: #f5f5f5;
+    --grey-200: #e9eaeb;
+    --grey-25: #fdfdfd;
+    --grey-300: #d5d7da;
+    --grey-400: #a4a7ae;
+    --grey-50: #fafafa;
+    --grey-500: #717680;
+    --grey-600: #535862;
+    --grey-700: #414651;
+    --grey-750: #2d2d2d;
+    --grey-800: #1c1c1c;
+    --grey-900: #191919;
+    --grey-950: #0a0d12;
+    --pure-black: #000000;
+    --pure-white: #ffffff;
+    --red-100: #fee4e2;
+    --red-200: #fecdca;
+    --red-25: #fffbfa;
+    --red-300: #fda29b;
+    --red-400: #f97066;
+    --red-50: #fef3f2;
+    --red-500: #f04438;
+    --red-600: #d92d20;
+    --red-700: #b42318;
+    --red-800: #912018;
+    --red-900: #7a271a;
+    --red-950: #55160c;
+    /* number */
     --scale-0: 0px;
+    --scale-0-25-1px: 1px;
+    --scale-0-5-2px: 2px;
     --scale-1-4px: 4px;
+    --scale-1-5-6px: 6px;
     --scale-2-8px: 8px;
+    --scale-2-5-10px: 10px;
     --scale-3-12px: 12px;
-    --scale-0_5-2px: 2px;
-    --scale-1_5-6px: 6px;
     --scale-4-16px: 16px;
     --scale-5-20px: 20px;
     --scale-6-24px: 24px;
@@ -48,26 +81,17 @@
     --scale-160-640px: 640px;
     --scale-180-720px: 720px;
     --scale-192-768px: 768px;
-    --scale-320-1280px: 1280px;
     --scale-256-1024px: 1024px;
+    --scale-320-1280px: 1280px;
     --scale-360-1440px: 1440px;
     --scale-400-1600px: 1600px;
     --scale-480-1920px: 1920px;
-    --pure-white: #ffffff;
-    --pure-black: #000000;
-    --scale-0_25-1px: 1px;
     --scale-unlimited-9999px: 9999px;
-    --scale-2_5-10px: 10px;
-    --red-400: #f97066;
-    --red-25: #fffbfa;
-    --red-50: #fef3f2;
-    --red-100: #fee4e2;
-    --red-200: #fecdca;
-    --red-300: #fda29b;
-    --red-500: #f04438;
-    --red-600: #d92d20;
-    --red-700: #b42318;
-    --red-800: #912018;
-    --red-900: #7a271a;
-    --red-950: #55160c;
+    /* string */
+    --type-font-family-body: onest;
+    --type-font-family-heading: onest;
+    --type-font-weight-bold: bold;
+    --type-font-weight-medium: medium;
+    --type-font-weight-regular: regular;
+    --type-font-weight-semibold: semibold;
 }
