--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -16,7 +16,7 @@
     [text]="'Кнопка'"
     [icon]="IconType.Bell"
     [iconPosition]="IconPosition.End"
-    [size]="Size.Small"
+    [size]="ExtraSize.sm"
 />
 <br/>
 
@@ -25,7 +25,7 @@
     [text]="'Кнопка'"
     [icon]="IconType.Bell"
     [iconPosition]="IconPosition.End"
-    [size]="Size.Medium"
+    [size]="ExtraSize.md"
 />
 <br/>
 
@@ -34,7 +34,7 @@
     [text]="'Кнопка'"
     [icon]="IconType.Bell"
     [iconPosition]="IconPosition.End"
-    [size]="Size.Large"
+    [size]="ExtraSize.lg"
 />
 <br/>
 
@@ -43,7 +43,7 @@
     [text]="'Кнопка'"
     [icon]="IconType.Bell"
     [iconPosition]="IconPosition.End"
-    [size]="Size.Large"
+    [size]="ExtraSize.lg"
     [disabled]="true"
 />
 
@@ -54,7 +54,7 @@
     [text]="'Кнопка'"
     [icon]="IconType.Bell"
     [iconPosition]="IconPosition.End"
-    [size]="Size.Large"
+    [size]="ExtraSize.lg"
 />
 
 <br/>
@@ -64,7 +64,7 @@
     [text]="'Кнопка'"
     [icon]="IconType.Bell"
     [iconPosition]="IconPosition.End"
-    [size]="Size.Large"
+    [size]="ExtraSize.lg"
 />
 
 <!--  *****   -->
@@ -73,7 +73,7 @@
     [text]="'Кнопка'"
     [icon]="IconType.Bell"
     [iconPosition]="IconPosition.OnlyIcon"
-    [size]="Size.Small"
+    [size]="ExtraSize.sm"
 />
 <br/>
 
@@ -82,7 +82,7 @@
     [text]="'Кнопка'"
     [icon]="IconType.Bell"
     [iconPosition]="IconPosition.OnlyIcon"
-    [size]="Size.Medium"
+    [size]="ExtraSize.md"
 />
 <br/>
 
@@ -91,7 +91,7 @@
     [text]="'Кнопка'"
     [icon]="IconType.Bell"
     [iconPosition]="IconPosition.OnlyIcon"
-    [size]="Size.Large"
+    [size]="ExtraSize.lg"
 />
 <br/>
 
@@ -100,7 +100,7 @@
     [text]="'Кнопка'"
     [icon]="IconType.Bell"
     [iconPosition]="IconPosition.OnlyIcon"
-    [size]="Size.Large"
+    [size]="ExtraSize.lg"
     [disabled]="true"
 />
 
@@ -112,7 +112,7 @@
     [text]="'Кнопка'"
     [icon]="IconType.Bell"
     [iconPosition]="IconPosition.OnlyIcon"
-    [size]="Size.Large"
+    [size]="ExtraSize.lg"
 />
 
 <br/>
@@ -122,7 +122,7 @@
     [text]="'Кнопка'"
     [icon]="IconType.Bell"
     [iconPosition]="IconPosition.OnlyIcon"
-    [size]="Size.Large"
+    [size]="ExtraSize.lg"
 />
 <br/>
 
@@ -131,7 +131,7 @@
     [text]="'Кнопка'"
     [icon]="IconType.Bell"
     [iconPosition]="IconPosition.OnlyIcon"
-    [size]="Size.Large"
+    [size]="ExtraSize.lg"
 />
 <br/>
 
@@ -259,5 +259,50 @@
 <br>
 
 <ss-lib-number-picker [formControl]="numberPickerCtrl" [min]="5" [max]="1000"></ss-lib-number-picker>
+<br>
 
+<ss-lib-button
+    [type]="ButtonType.Primary"
+    [text]="'Кнопка'"
+    [icon]="IconType.Alert"
+    [iconPosition]="IconPosition.End"
+    [size]="ExtraSize.sm"
+/>
+<br>
 
+<span>НОВЫЕ ТИПЫ КНОПОК</span>
+
+<ss-lib-button
+    [type]="ButtonType.Primary"
+    [text]="'Кнопка'"
+    [icon]="IconType.Alert"
+    [iconPosition]="IconPosition.End"
+    [size]="ExtraSize.sm"
+/>
+<br>
+
+<ss-lib-button
+    [type]="ButtonType.Secondary"
+    [text]="'Кнопка2'"
+    [icon]="IconType.Alert"
+    [iconPosition]="IconPosition.End"
+    [size]="ExtraSize.sm"
+/>
+<br>
+
+<ss-lib-button
+    [type]="ButtonType.Ghost"
+    [text]="'Кнопка3'"
+    [icon]="IconType.Alert"
+    [iconPosition]="IconPosition.End"
+    [size]="ExtraSize.sm"
+/>
+<br>
+
+<ss-lib-button
+    [type]="ButtonType.Text"
+    [text]="'Кнопка4'"
+    [icon]="IconType.Alert"
+    [iconPosition]="IconPosition.End"
+    [size]="ExtraSize.sm"
+/>
