feature/2867: fix secondary type button

--- a/projects/front-components/src/lib/components/buttons/base-button/base-button.component.scss
+++ b/projects/front-components/src/lib/components/buttons/base-button/base-button.component.scss
@@ -1,9 +1,4 @@
-//:host {
-//    display: flex;
-//    align-items: center;
-//}
-
-//button:disabled {
-//    cursor: default;
-//}
-
+:host {
+    display: flex;
+    align-items: center;
+}
