--- a/projects/front-components/src/lib/components/number-picker/number-picker.component.html
+++ b/projects/front-components/src/lib/components/number-picker/number-picker.component.html
@@ -2,6 +2,7 @@
     <ss-lib-button
         class="number-picker__number-indicator indicator-start border-none"
         [type]="ButtonType.Secondary"
+        [size]="ExtraSize.lg"
         [icon]="IconType.Minus"
         [iconPosition]="IconPosition.OnlyIcon"
         [disabled]="isDisabled() || numberPickerCtrl.value && min() && numberPickerCtrl.value <= min()!"
@@ -24,6 +25,7 @@
     <ss-lib-button
         class="number-picker__number-indicator indicator-end"
         [type]="ButtonType.Secondary"
+        [size]="ExtraSize.lg"
         [icon]="IconType.Plus"
         [iconPosition]="IconPosition.OnlyIcon"
         [disabled]="isDisabled() || numberPickerCtrl.value && max() && numberPickerCtrl.value >= max()!"
