feature/2867: fix styles of buttons

--- a/projects/front-components/src/lib/components/buttons/base-button/base-button.component.html
+++ b/projects/front-components/src/lib/components/buttons/base-button/base-button.component.html
@@ -27,6 +27,15 @@
         }
 
         @switch (size()) {
+            @case (ButtonSize.xs) {
+                <ss-lib-text
+                    [type]="TextType.BodySm"
+                    [weight]="TextWeight.Regular"
+                    [color]="buttonTextColors() | getColor : state() : disabled() : false"
+                >
+                    {{ text() }}
+                </ss-lib-text>
+            }
             @case (ButtonSize.sm) {
                 <ss-lib-text
                     [type]="TextType.BodySm"
